--- a/index.html
+++ b/index.html
@@ -3,10 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Il mio Portfolio</title>
+    <title>Federico Torre - Portfolio Accademico</title>
+    <style>
+        body { font-family: Arial, sans-serif; background-color: #f0f2f5; margin: 0; padding: 20px; }
+        h1, h2 { color: #333; }
+        .project { background: white; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+        .project img { width: 100%; max-width: 600px; height: auto; margin-top: 15px; }
+        .project a { text-decoration: none; color: #0077cc; }
+        .project a:hover { text-decoration: underline; }
+    </style>
 </head>
 <body>
-    <h1>Benvenuto nel mio portfolio!</h1>
-    <p>Qui troverai tutti i miei progetti.</p>
+    <header>
+        <h1>Portfolio Accademico di Federico Torre</h1>
+    </header>
+    <section class="project">
+        <h2>Interplanetary Explorer Mission - Orbital Mechanics</h2>
+        <p>Sviluppato un concetto di missione per l'esplorazione interplanetaria Earth-to-Earth, focalizzato sulla meccanica orbitale e la fattibilità della missione.</p>
+        <a href="link-al-tuo-paper" target="_blank">Leggi il paper</a>
+        <img src="percorso/immagine-progetto.jpg" alt="Immagine del Progetto Interplanetary Explorer Mission">
+    </section>
+    <section class="project">
+        <h2>Definition of Spacecraft Attitude for Correct Targeting - Spacecraft Attitude Dynamics</h2>
+        <p>Definita la dinamica di orientamento del veicolo spaziale per assicurare un puntamento preciso verso la stella Taurus.</p>
+        <a href="link-al-tuo-paper" target="_blank">Leggi il paper</a>
+        <img src="percorso/immagine-progetto.jpg" alt="Immagine di Spacecraft Attitude Dynamics">
+    </section>
+    <section class="project">
+        <h2>Engine Sizing and Propellant Selection - Space Propulsion</h2>
+        <p>Dimensionato sei motori selezionando i propellenti appropriati, gli iniettori e i sistemi di raffreddamento.</p>
+        <a href="link-al-tuo-paper" target="_blank">Leggi il paper</a>
+        <img src="percorso/immagine-progetto.jpg" alt="Immagine di Space Propulsion">
+    </section>
+    <section class="project">
+        <h2>Reverse Engineering of the LRO Mission - Space System Engineering and Operations</h2>
+        <p>Realizzato l'ingegneria inversa della missione Lunar Reconnaissance Orbiter, concentrandosi su design del sistema e strategie operative.</p>
+        <a href="link-al-tuo-paper" target="_blank">Leggi il paper</a>
+        <img src="percorso/immagine-progetto.jpg" alt="Immagine di LRO Mission">
+    </section>
+    <!-- Continua ad aggiungere altre sezioni per ogni progetto menzionato nel tuo CV. -->
 </body>
 </html>
