--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Federico Torre - Portfolio Accademico</title>
+    <title>Federico Torre - Academic Portfolio</title>
     <style>
         body { font-family: Arial, sans-serif; background-color: #f0f2f5; margin: 0; padding: 20px; }
         h1, h2 { color: #333; }
@@ -15,32 +15,61 @@
 </head>
 <body>
     <header>
-        <h1>Portfolio Accademico di Federico Torre</h1>
+        <h1>Federico Torre's Academic Portfolio</h1>
     </header>
     <section class="project">
         <h2>Interplanetary Explorer Mission - Orbital Mechanics</h2>
-        <p>Sviluppato un concetto di missione per l'esplorazione interplanetaria Earth-to-Earth, focalizzato sulla meccanica orbitale e la fattibilità della missione.</p>
-        <a href="link-al-tuo-paper" target="_blank">Leggi il paper</a>
-        <img src="percorso/immagine-progetto.jpg" alt="Immagine del Progetto Interplanetary Explorer Mission">
+        <p>Developed a mission concept for Earth-to-Earth interplanetary exploration, focusing on orbital mechanics and mission feasibility.</p>
+        <a href="link-to-your-paper" target="_blank">Read the paper</a>
+        <img src="path/to/project-image.jpg" alt="Image of Interplanetary Explorer Mission">
     </section>
     <section class="project">
         <h2>Definition of Spacecraft Attitude for Correct Targeting - Spacecraft Attitude Dynamics</h2>
-        <p>Definita la dinamica di orientamento del veicolo spaziale per assicurare un puntamento preciso verso la stella Taurus.</p>
-        <a href="link-al-tuo-paper" target="_blank">Leggi il paper</a>
-        <img src="percorso/immagine-progetto.jpg" alt="Immagine di Spacecraft Attitude Dynamics">
+        <p>Defined the attitude dynamics of the spacecraft to ensure precise pointing towards the Taurus star.</p>
+        <a href="link-to-your-paper" target="_blank">Read the paper</a>
+        <img src="path/to/project-image.jpg" alt="Image of Spacecraft Attitude Dynamics">
     </section>
     <section class="project">
         <h2>Engine Sizing and Propellant Selection - Space Propulsion</h2>
-        <p>Dimensionato sei motori selezionando i propellenti appropriati, gli iniettori e i sistemi di raffreddamento.</p>
-        <a href="link-al-tuo-paper" target="_blank">Leggi il paper</a>
-        <img src="percorso/immagine-progetto.jpg" alt="Immagine di Space Propulsion">
+        <p>Sized six engines by selecting appropriate propellants, injectors, and cooling systems.</p>
+        <a href="link-to-your-paper" target="_blank">Read the paper</a>
+        <img src="path/to/project-image.jpg" alt="Image of Space Propulsion">
     </section>
     <section class="project">
         <h2>Reverse Engineering of the LRO Mission - Space System Engineering and Operations</h2>
-        <p>Realizzato l'ingegneria inversa della missione Lunar Reconnaissance Orbiter, concentrandosi su design del sistema e strategie operative.</p>
-        <a href="link-al-tuo-paper" target="_blank">Leggi il paper</a>
-        <img src="percorso/immagine-progetto.jpg" alt="Immagine di LRO Mission">
+        <p>Conducted reverse engineering of the Lunar Reconnaissance Orbiter (LRO) mission, focusing on its system design and operational strategies.</p>
+        <a href="link-to-your-paper" target="_blank">Read the paper</a>
+        <img src="path/to/project-image.jpg" alt="Image of LRO Mission">
     </section>
-    <!-- Continua ad aggiungere altre sezioni per ogni progetto menzionato nel tuo CV. -->
+    <section class="project">
+        <h2>Design of an Ultra-Rapid Transoceanic Delivery System - Launch System</h2>
+        <p>Developed the conceptual design of the Fast Logistics Across Suborbital Highways (FLASH) system based on customer specifications and conducted mission analysis and rocket design.</p>
+        <a href="link-to-your-paper" target="_blank">Read the paper</a>
+        <img src="path/to/project-image.jpg" alt="Image of Transoceanic Delivery System">
+    </section>
+    <section class="project">
+        <h2>Advanced Orbital Mechanics and Navigation - Guidance Navigation and Control</h2>
+        <p>Explored advanced orbital mechanics and navigation techniques including periodic orbits and impulsive guidance, and developed navigation solutions through various methods.</p>
+        <a href="link-to-your-paper" target="_blank">Read the paper</a>
+        <img src="path/to/project-image.jpg" alt="Image of Orbital Mechanics">
+    </section>
+    <section class="project">
+        <h2>Spacecraft Structural Compliance Analysis for Ariane VI - Analysis and Testing</h2>
+        <p>Conducted a complete structural analysis of a spacecraft to ensure compliance with Ariane VI launch requirements using finite element models and MATLAB codes.</p>
+        <a href="link-to-your-paper" target="_blank">Read the paper</a>
+        <img src="path/to/project-image.jpg" alt="Image of Ariane VI Compliance">
+    </section>
+    <section class="project">
+        <h2>Plasma Flow Analysis in Magneto-Plasma Dynamic Thrusters - Aerothermodynamics</h2>
+        <p>Developed a 1D mathematical model for plasma flow in self-field Magneto-Plasma Dynamic Thrusters by coupling Navier–Stokes and Maxwell’s equations.</p>
+        <a href="link-to-your-paper" target="_blank">Read the paper</a>
+        <img src="path/to/project-image.jpg" alt="Image of MPD Thruster">
+    </section>
+    <section class="project">
+        <h2>Bibliographic Research on Space Debris Removal - Operation Research</h2>
+        <p>Investigated optimization strategies for orbital debris removal, focusing on methods like Branch and Bound algorithms and stochastic programming.</p>
+        <a href="link-to-your-paper" target="_blank">Read the paper</a>
+        <img src="path/to/project-image.jpg" alt="Image of Debris Removal">
+    </section>
 </body>
 </html>
