--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>About Me - Federico Torre</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="about-background">
     <header>
         <h1>About Me</h1>
         <nav>
