--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     </header>
     <main>
         <p>This is the homepage of my personal website where you can learn more about my academic and professional background.</p>
+        <p>Connect with me on <a href="https://www.linkedin.com/in/federico-torre/" target="_blank">LinkedIn</a>.</p>
     </main>
     <footer>
         <p>Contact me at: <a href="mailto:federico.torre@mail.polimi.it">federico.torre@mail.polimi.it</a></p>
     </footer>
 </body>
 </html>
+
