--- a/experience.html
+++ b/experience.html
@@ -1,37 +1,64 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0f2f5;
-}
-header {
-    background-color: #333;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-}
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-nav ul li {
-    display: inline;
-    margin-right: 10px;
-}
-nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-main {
-    padding: 20px;
-    text-align: center;
-}
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px 20px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Work Experience - Federico Torre</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Work Experience</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Academic Projects</a></li>
+                <li><a href="experience.html">Work Experience</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="work-experience">
+            <h2>ItalBlowers, Pieve Emanuele (MI)</h2>
+            <p><strong>Working Student: Technical Office (Mechanical Design)</strong></p>
+            <ul>
+                <li>Designed blower components using CATIA V5, ensuring compliance with manufacturing constraints and performance requirements.</li>
+                <li>Prepared technical documentation to define blower performance parameters, material specifications, and operational guidelines.</li>
+            </ul>
+            <p><strong>Skills:</strong> CATIA V5, Technical Documentation, Mechanical Design, Fluid-dynamics Principle</p>
+
+            <h2>ItalBlowers, Pieve Emanuele (MI)</h2>
+            <p><strong>Bachelor's Thesis Research</strong></p>
+            <ul>
+                <li>Investigated fluid dynamic principles governing blower performance, focusing on pressure differentials, flow efficiency, and noise generation.</li>
+                <li>Designed soundproofed blower enclosures using CATIA V5, integrating aerodynamically optimized geometries for enhanced acoustic damping.</li>
+                <li>Conducted computational analyses of flow disturbances and sound propagation to refine noise reduction methodologies.</li>
+            </ul>
+            <p><strong>Skills:</strong> CATIA V5, System Size, Acoustic Analysis, Noise Reduction Strategies, Performance Optimization, and Fluid-dynamics Principle</p>
+
+            <h2>Neutron Star Systems, Munich, Ottobrunn (MU)</h2>
+            <p><strong>Full-Time: Master's Thesis Research</strong></p>
+            <ul>
+                <li>Researching the integration of an AF-MPD (SUPREME) thruster with water as a propellant to develop a multi-mode propulsion system.</li>
+                <li>Developing a 0D plasma-thermal model for cathode prototyping using Hydrogen as propellant.</li>
+                <li>Implementing a mission analysis code for optimizing collision avoidance in low-to-high thrust transition scenarios, utilizing numerical optimization techniques.</li>
+            </ul>
+            <p><strong>Skills:</strong> Electric Propulsion, Plasma Modeling, Mission Analysis, Numerical Optimization</p>
+
+            <h2>Institute of Space Systems, University of Stuttgart, Stuttgart (ST)</h2>
+            <p><strong>Full-Time: Visiting Researcher</strong></p>
+            <ul>
+                <li>Receiving help for the implementation of 0D plasma-thermal model.</li>
+                <li>Investigating electrolyzer subsystems for in-space water electrolysis, assessing efficiency and integration with propulsion architectures.</li>
+                <li>Evaluating chemical thruster candidates compatible with water-based propulsion systems, performing trade-off studies on ISP, thrust, and thermal compatibility.</li>
+                <li>Participating in the testing laboratory of the SX3 AF-MPD thruster.</li>
+            </ul>
+            <p><strong>Skills:</strong> Electric Propulsion, Electrolysis Systems, Chemical Thrusters, Experimental Testing, Plasma Diagnostics</p>
+        </section>
+    </main>
+    <footer>
+        <p>Contact me at: <a href="mailto:federico.torre@mail.polimi.it">federico.torre@mail.polimi.it</a></p>
+    </footer>
+</body>
+</html>
