improve about me

--- a/about.html
+++ b/about.html
@@ -19,7 +19,24 @@
         </nav>
     </header>
     <main>
-        <p>Here you can read more about my background, interests, and academic journey.</p>
+        <section id="electric-propulsion">
+            <h2>Electric Propulsion</h2>
+            <p>Explore my projects and work experience related to Electric Propulsion.</p>
+            <ul>
+                <li><a href="projects.html#plasma-flow">Plasma Flow Analysis in Magneto-Plasma Dynamic Thrusters - Aerothermodynamics</a></li>
+                <li><a href="experience.html#neutron-star-systems">Neutron Star Systems, Munich, Ottobrunn (MU)</a></li>
+                <li><a href="experience.html#institute-space-systems">Institute of Space Systems, University of Stuttgart, Stuttgart (ST)</a></li>
+            </ul>
+        </section>
+        <section id="cad-model">
+            <h2>CAD Model</h2>
+            <p>View some of the CAD models I have worked on.</p>
+            <div class="gallery">
+                <img src="images/cad1.jpg" alt="CAD Model 1">
+                <img src="images/cad2.jpg" alt="CAD Model 2">
+                <img src="images/cad3.jpg" alt="CAD Model 3">
+            </div>
+        </section>
     </main>
     <footer>
         <p>Contact me at: <a href="mailto:federico.torre@mail.polimi.it">federico.torre@mail.polimi.it</a></p>
