--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Federico Torre</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="home-background">
     <header>
         <h1>Welcome to Federico Torre's Website</h1>
         <nav>
