--- a/about.html
+++ b/about.html
@@ -32,9 +32,11 @@
             <h2>CAD Model</h2>
             <p>View some of the CAD models I have worked on.</p>
             <div class="gallery">
-                <img src="images/cad1.jpg" alt="CAD Model 1">
-                <img src="images/cad2.jpg" alt="CAD Model 2">
-                <img src="images/cad3.jpg" alt="CAD Model 3">
+                <img src="images/Picture1.jpg" alt="CAD Model 1">
+                <img src="images/Picture2.jpg" alt="CAD Model 2">
+                <img src="images/Picture3.jpg" alt="CAD Model 3">
+                <img src="images/Picture4.jpg" alt="CAD Model 4">
+                <img src="images/Picture5.jpg" alt="CAD Model 5">
             </div>
         </section>
     </main>
