adding background and header

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>About Me - Federico Torre</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="about-background">
+<body>
     <header>
         <h1>About Me</h1>
         <nav>
@@ -32,11 +32,11 @@
             <h2>CAD Model</h2>
             <p>View some of the CAD models I have worked on.</p>
             <div class="gallery">
-                <img src="images/Picture1.png" alt="CAD Model 1">
-                <img src="images/Picture2.png" alt="CAD Model 2">
-                <img src="images/Picture3.png" alt="CAD Model 3">
-                <img src="images/Picture4.png" alt="CAD Model 4">
-                <img src="images/Picture5.png" alt="CAD Model 5">
+                <img src="images/Picture1.jpg" alt="CAD Model 1">
+                <img src="images/Picture2.jpg" alt="CAD Model 2">
+                <img src="images/Picture3.jpg" alt="CAD Model 3">
+                <img src="images/Picture4.jpg" alt="CAD Model 4">
+                <img src="images/Picture5.jpg" alt="CAD Model 5">
             </div>
         </section>
     </main>
