--- a/experience.html
+++ b/experience.html
@@ -21,6 +21,20 @@
     <main>
         <section id="neutron-star-systems">
             <h2>Neutron Star Systems, Munich, Ottobrunn (MU)</h2>
-            <p>Description of the work conducted, the responsibilities held, and the skills developed.</p>
+            <p>Researched and developed electric propulsion systems, specifically focusing on AF-MPD thrusters for Neutron Star Systems. Tasks included plasma simulation, thermal analysis, and system integration, contributing significantly to the prototype development.</p>
         </section>
-        <section id
+        <section id="institute-space-systems">
+            <h2>Institute of Space Systems, University of Stuttgart, Stuttgart (ST)</h2>
+            <p>Engaged in a collaborative project at the Institute of Space Systems where I worked on the development of space mission analysis tools and conducted research on thermal protection systems for re-entry vehicles. My contributions helped enhance model accuracy and simulation reliability.</p>
+        </section>
+        <section id="italblowers">
+            <h2>ItalBlowers, Pieve Emanuele (MI)</h2>
+            <p>Served as a mechanical engineer focusing on the design and optimization of industrial blowers. Responsibilities included CAD modeling, performance testing, and improvements to design processes that resulted in a 20% reduction in production costs and time.</p>
+        </section>
+        <!-- Add more sections as needed for other experiences -->
+    </main>
+    <footer>
+        <p>Contact me at: <a href="mailto:federico.torre@mail.polimi.it">federico.torre@mail.polimi.it</a></p>
+    </footer>
+</body>
+</html>
