--- a/Main-interest.html
+++ b/Main-interest.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Federico Torre</title>
+    <title>Main Interest - Federico Torre</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>About Me</h1>
+        <h1>Main Interest</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
+                <li><a href="main-interest.html">Main Interest</a></li>
                 <li><a href="projects.html">Academic Projects</a></li>
                 <li><a href="experience.html">Work Experience</a></li>
             </ul>
