--- a/experience.html
+++ b/experience.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
+                <li><a href="main-interest.html">Main Interest</a></li>
                 <li><a href="projects.html">Academic Projects</a></li>
                 <li><a href="experience.html">Work Experience</a></li>
             </ul>
