--- a/Main-interest.html
+++ b/Main-interest.html
@@ -24,6 +24,7 @@
             <p>Explore my projects and work experience related to Electric Propulsion.</p>
             <ul>
                 <li><a href="projects.html#plasma-flow">Plasma Flow Analysis in Magneto-Plasma Dynamic Thrusters - Aerothermodynamics</a></li>
+				 <p class="abstract">The paper describes one-dimensional (1D) flow mathematical model to study the physics of fully ionized plasma flow through Magneto Plasma Dynamic Thruster (MPDT). The developed model consists of a set of differential equations obtained by coupling the Navier–Stokes equations with Maxwell’s equations. These simulations have been carried out for a special case of geometries called Tikhonov fitted geometries for alleviating the instability phenomenon commonly known as onset phenomenon in self-field MPDT. All the computations were carried out in Matlab using a higher order integration scheme.</p>
                 <li><a href="experience.html#neutron-star-systems">Neutron Star Systems, Munich, Ottobrunn (MU)</a></li>
                 <li><a href="experience.html#institute-space-systems">Institute of Space Systems, University of Stuttgart, Stuttgart (ST)</a></li>
             </ul>
