--- a/Main-interest.html
+++ b/Main-interest.html
@@ -31,7 +31,7 @@ During this experience, I also had the opportunity to collaborate with the Unive
                 <li><a href="experience.html#institute-space-systems">Institute of Space Systems, University of Stuttgart, Stuttgart (ST)</a></li>
 				<p>This thesis analyzes the design of a multimodal propulsion system with a focus on the electric propulsion system (AF-MPD thruster). For this thruster, I am developing a 0D plasma-thermal model for the design of the cathode, which will be powered by hydrogen. The propellant for the multimodal system is water.
 Additionally, a mission analysis code has been developed to assess the benefits of a multimodal system compared to a traditional one. The approach involves using a fuel-optimal strategy based on energy-optimal information.
-Note: The work will be completed by July 2025, and no papers are available at this time. Further details can be provided during an interview.
+<br> Note: The work will be completed by July 2025, and no papers are available at this time. Further details can be provided during an interview.
             </ul>
         </section>
         <section id="cad-model">
