--- a/Main-interest.html
+++ b/Main-interest.html
@@ -27,6 +27,7 @@ During this experience, I also had the opportunity to collaborate with the Unive
             <ul>
                 <li><a href="projects.html#plasma-flow">Plasma Flow Analysis in Magneto-Plasma Dynamic Thrusters - Aerothermodynamics</a></li>
 				 <p> <strong>Abstract:</strong>The paper describes one-dimensional (1D) flow mathematical model to study the physics of fully ionized plasma flow through Magneto Plasma Dynamic Thruster (MPDT). The developed model consists of a set of differential equations obtained by coupling the Navier–Stokes equations with Maxwell’s equations. These simulations have been carried out for a special case of geometries called Tikhonov fitted geometries for alleviating the instability phenomenon commonly known as onset phenomenon in self-field MPDT. All the computations were carried out in Matlab using a higher order integration scheme.</p>
+				 <a href="Torre_Project_Aerothermodynamics.pdf" target="_blank">Read the paper</a>
                 <li><a href="experience.html#neutron-star-systems">Neutron Star Systems, Munich, Ottobrunn (MU)</a></li>
                 <li><a href="experience.html#institute-space-systems">Institute of Space Systems, University of Stuttgart, Stuttgart (ST)</a></li>
 				<p>This thesis analyzes the design of a multimodal propulsion system with a focus on the electric propulsion system (AF-MPD thruster). For this thruster, I am developing a 0D plasma-thermal model for the design of the cathode, which will be powered by hydrogen. The propellant for the multimodal system is water.
