--- a/projects.html
+++ b/projects.html
@@ -21,18 +21,28 @@
     <main>
         <section class="project">
             <h2>Interplanetary Explorer Mission - Orbital Mechanics</h2>
-            <p>Developed a mission concept for Earth-to-Earth interplanetary exploration, focusing on orbital mechanics and mission feasibility.</p>
-            <a href="Projects/OrbitalMech_group_2271_project.pdf" target="_blank">Read the paper</a>
+            <p>This paper presents the development of a mission concept for Earth-to-Earth interplanetary exploration, focusing on orbital mechanics and mission feasibility. The study optimizes the transfer trajectory to a Near-Earth Object (NEO) using the patched conics method, with considerations for flybys and minimizing maneuver costs. The project involves the analysis of time windows for the mission, orbital perturbations from Earth's gravity and solar radiation pressure, and the evolution of Keplerian elements over time. A comparison with real mission data from the IRNSS 1E satellite was conducted to validate the model's accuracy.</p>
+            <a href="Projects/OrbitalMech_group_2271_project.pdf" target="_blank">Read the paper_OM</a>
         </section>
         <section class="project">
-            <h2>Definition of Spacecraft Attitude for Correct Targeting - Spacecraft Attitude Dynamics</h2>
-            <p>Defined the attitude dynamics of the spacecraft to ensure precise pointing towards the Taurus star.</p>
-            <a href="Projects/15.pdf" target="_blank">Read the paper</a>
+            <h2>Definition of Spacecraft Attitude for Correct Pointing - Spacecraft Attitude Dynamics</h2>
+            <p>The aim of this project is to simulate the behavior of a 6U CubeSat during its orbit. The spacecraft is equipped with a set of gyroscopes, two reaction wheels, and one inertia wheel. The mission's goal is to point towards Aldebaran, a star in the Taurus constellation, during the eclipse phase of its orbit, while charging and transmitting data to Earth during sunlight exposure. The spacecraft's dynamics and environmental disturbances were modeled, alongside the non-ideal behaviors of its sensors and actuators. A control logic was implemented to ensure precise pointing and enable switching between various targets.</p>
+            <a href="Projects/15.pdf" target="_blank">Read the paper_SAD</a>
         </section>
         <section class="project">
             <h2>Engine Sizing and Propellant Selection - Space Propulsion</h2>
-            <p>Sized six engines by selecting appropriate propellants, injectors, and cooling systems.</p>
-            <a href="Projects/2023_PROPULSON_PROJECT.pdf" target="_blank">Read the paper</a>
+            <p> In this paper a series of engines for a kick stage of a small satellite (250 kg of dry mass) are
+ studied. The rocket has to grant a total ∆v of 2500 m/s. A nominal thrust level of 500 N
+ is selected. This value is doubled and halved in a successive analysis in order to compare
+ a dimension variation in the engine. The process is repeated for two propellants couples:
+ N2H4 −NTO and RP1−H2O2. The second is introduced in order to propose a green
+ alternative to the toxic one. The engine shall be realized in additive manufacturing using
+ compatible materials, both with the manufacturing techniques and with the adopted
+ propellants. For the six engines are sized combustion chambers, injection plates and
+ nozzles in addition to pressure-fed feeding lines. It is considered a cooling strategy for the
+ engines with a combination of regenerative cooling, radiative cooling and thermal barrier
+ coating.</p>
+            <a href="Projects/2023_PROPULSON_PROJECT.pdf" target="_blank">Read the paper_SP</a>
         </section>
         <section class="project">
             <h2>Reverse Engineering of the LRO Mission - Space System Engineering and Operations</h2>
