--- a/projects.html
+++ b/projects.html
@@ -20,17 +20,19 @@
     </header>
     <main>
         <section class="project">
-            <h2>Interplanetary Explorer Mission - Orbital Mechanics</h2>
+            <h2>Interplanetary Explorer Mission - Orbital Mechanics (Team work)</h2>
             <p>This paper presents the development of a mission concept for Earth-to-Earth interplanetary exploration, focusing on orbital mechanics and mission feasibility. The study optimizes the transfer trajectory to a Near-Earth Object (NEO) using the patched conics method, with considerations for flybys and minimizing maneuver costs. The project involves the analysis of time windows for the mission, orbital perturbations from Earth's gravity and solar radiation pressure, and the evolution of Keplerian elements over time. A comparison with real mission data from the IRNSS 1E satellite was conducted to validate the model's accuracy.</p>
-            <a href="Projects/OrbitalMech_group_2271_project.pdf" target="_blank">Read the paper_OM</a>
+             <br><strong>My role:</strong>
+          <br><a href="Projects/OrbitalMech_group_2271_project.pdf" target="_blank">Read the paper_OM</a>
         </section>
         <section class="project">
-            <h2>Definition of Spacecraft Attitude for Correct Pointing - Spacecraft Attitude Dynamics</h2>
+            <h2>Definition of Spacecraft Attitude for Correct Pointing - Spacecraft Attitude Dynamics (Team work)</h2>
             <p>The aim of this project is to simulate the behavior of a 6U CubeSat during its orbit. The spacecraft is equipped with a set of gyroscopes, two reaction wheels, and one inertia wheel. The mission's goal is to point towards Aldebaran, a star in the Taurus constellation, during the eclipse phase of its orbit, while charging and transmitting data to Earth during sunlight exposure. The spacecraft's dynamics and environmental disturbances were modeled, alongside the non-ideal behaviors of its sensors and actuators. A control logic was implemented to ensure precise pointing and enable switching between various targets.</p>
-            <a href="Projects/15.pdf" target="_blank">Read the paper_SAD</a>
+             <br><strong>My role:</strong>
+          <br><a href="Projects/15.pdf" target="_blank">Read the paper_SAD</a>
         </section>
         <section class="project">
-            <h2>Engine Sizing and Propellant Selection - Space Propulsion</h2>
+            <h2>Engine Sizing and Propellant Selection - Space Propulsion (Team work)</h2>
             <p> In this paper a series of engines for a kick stage of a small satellite (250 kg of dry mass) are
  studied. The rocket has to grant a total ∆v of 2500 m/s. A nominal thrust level of 500 N
  is selected. This value is doubled and halved in a successive analysis in order to compare
@@ -42,40 +44,107 @@
  nozzles in addition to pressure-fed feeding lines. It is considered a cooling strategy for the
  engines with a combination of regenerative cooling, radiative cooling and thermal barrier
  coating.</p>
-            <a href="Projects/2023_PROPULSON_PROJECT.pdf" target="_blank">Read the paper_SP</a>
+  <br><strong>My role:</strong>
+          <br><a href="Projects/2023_PROPULSON_PROJECT.pdf" target="_blank">Read the paper_SP</a>
         </section>
         <section class="project">
-            <h2>Reverse Engineering of the LRO Mission - Space System Engineering and Operations</h2>
-            <p>Conducted reverse engineering of the Lunar Reconnaissance Orbiter (LRO) mission, focusing on its system design and operational strategies.</p>
-            <a href="Projects/Group20_Tot.pdf" target="_blank">Read the paper</a>
+            <h2>Reverse Engineering of the LRO Mission - Space System Engineering and Operations (Team work)</h2>
+            <p> In this paper the Lunar Reconnaissance Orbiter mission is analyzed from the definition of its main
+ objectives to the preliminary sizing of the spacecraft subsystems. The final goal is the identification of
+ the mission requirements, through the process of reverse engineering.
+ In the first chapter of the paper, the mission goals, functionalities and main phases of the orbiter’s lifetime
+ are defined. Also the trajectory design has been analysed in order to validate the ∆v breakdown.
+ In the following chapters, all the subsystems are analyzed and a preliminary sizing is performed for each
+ case.</p>
+ <br><strong>My role:</strong>
+          <br><a href="Projects/Group20_Tot.pdf" target="_blank">Read the paper_SSEO</a>
         </section>
         <section class="project">
-            <h2>Design of an Ultra-Rapid Transoceanic Delivery System - Launch System</h2>
-            <p>Developed the conceptual design of the Fast Logistics Across Suborbital Highways (FLASH) system based on customer specifications and conducted mission analysis and rocket design.</p>
-            <a href="[10645141]-[FLASH][2].pdf" target="_blank">Read the paper</a>
-			<p>Developed the conceptual design of the Fast Logistics Across Suborbital Highways (FLASH) system based on customer specifications and conducted mission
-			<a href="Flipped_Class_Launch.pdf" target="_blank">Read the paper</a>
+            <h2>Design of an Ultra-Rapid Transoceanic Delivery System - Launch System (Team work)</h2>
+            <p> The purpose of this report is to present the design of the Fast Logistics Across Suborbital
+ Highways (FLASH) ultra-fast transoceanic delivery service, predicated upon the specifica
+tions provided by customers. These requirement, includes time-to-market, maximum accel
+eration, payload mass, and arrival site,safety of the disposal of the stage , safety on ground
+ serve as the foundational criteria for the Conceptual Design. First of all, a baseline is es
+tablished through the analysis of the House of Quality (HOQ) , starting from the customer
+ requirements and the quality characteristic to be achieved. The study proceed with the mis
+sion analysis to fix the mission’s main features. The rocket can be then design: Dimensions,
+ Aerodynamics, Propulsion, Recovery, and Weight are evaluated. Finally, the performance
+ evaluation of the rocket with its nominal trajectory is provided; an analysis on how the
+ possible launch uncertainties can affect the impact point was also carried out, utilizing a
+ Montecarlo analysis. Upon completion of the preliminary design and definition of the mis
+sion profile, a preliminary requirements review is conducted to assess whether the customer’s
+ requirements are met by the obtained results.
+</p>
+<br><strong>My role:</strong>
+          <br><a href="[10645141]-[FLASH][2].pdf" target="_blank">Read the paper_LS</a>
+		  
+		  </section>
+        <section class="project">
+			<h2>Comparison between the Panelling Method and the Jorgenson Method - Launch System (Team work)</h2>
+			<p>This report conducts a concise analysis and comparison of results derived from two distinct
+ methodologies employed to estimate static
+ aerodynamic characteristics for slender bodies
+ with circular cross-sections and angle of attack
+ set at 10°. The focus is on studying the evolu
+tion of CP (pressure coefficient) and CN (nor
+mal force coefficient) under these conditions.
+ The selected methods for comparison are the
+ Paneling Method 2 and Jorgensen’s Method 3,
+ both specifically applicable to supersonic Mach
+ number scenarios.
+ <br><strong>My role:</strong>
+          <br><a href="Flipped_Class_Launch.pdf" target="_blank">Read the paper_LS</a>
         </section>
         <section class="project">
-            <h2>Advanced Orbital Mechanics and Navigation - Guidance Navigation and Control</h2>
-            <p>Explored advanced orbital mechanics and navigation techniques including periodic orbits and impulsive guidance, and developed navigation solutions through various methods.</p>
-            <a href="Report_Assign1_GNC.pdf" target="_blank">Read the paper</a>
-			<a href="Report_Assign1_GNC.pdf" target="_blank">Read the paper</a>
+            <h2>Assignment 1 - Guidance Navigation and Control</h2>
+            <p>This assignment explores advanced orbital mechanics and navigation techniques, including periodic orbits and impulsive guidance. The work involves developing navigation solutions through various methods, such as determining the x-coordinate of the Lagrange point L1, computing periodic halo orbits in the Earth-Moon system, and performing numerical continuation to analyze families of halo orbits. Additionally, impulsive guidance techniques were applied to design a planetary protection strategy for Apophis, focusing on reducing impact risk. The assignment concludes with a time-optimal Earth-Venus transfer problem, utilizing the Pontryagin Maximum Principle (PMP) and numerical continuation to optimize the spacecraft’s trajectory.</p>
+            <a href="Report_Assign1_GNC.pdf" target="_blank">Read the paper_GNC</a>
+			<h2>Assignment 2 - Guidance Navigation and Control</h2>
+			<p>This assignment delves into uncertainty propagation, batch filters, and sequential filters for spacecraft navigation. The first part involves simulating the propagation of uncertainty for two satellites, Mango and Tango, using methods such as Linearized Covariance, Unscented Transform, and Monte Carlo simulations. The goal was to assess the risk of collision by calculating relative positions and covariance over time, considering various methods for uncertainty estimation.
+
+The second part focuses on batch filtering, where the navigation solution for Mango was computed using ground station data and least squares estimation, with J2 perturbation included for improved accuracy. Different combinations of ground stations were compared to optimize navigation solutions.
+
+The third part applied sequential filtering to estimate the relative state between Mango and Tango for autonomous formation flying, employing an Unscented Kalman Filter (UKF) to process relative measurements and improve state estimation accuracy. The study concluded with the reconstruction of Tango’s absolute covariance using the relative state and covariance of Mango, demonstrating the effectiveness of the sequential filter in dynamic systems.</p>
+			<a href="Report_Assign1_GNC.pdf" target="_blank">Read the paper_GNC</a>
         </section>
         <section class="project">
-            <h2>Spacecraft Structural Compliance Analysis for Ariane VI - Analysis and Testing</h2>
-            <p>Conducted a complete structural analysis of a spacecraft to ensure compliance with Ariane VI launch requirements using finite element models and MATLAB codes.</p>
-            <a href="Projects/HIDB_Team_Analysis_Testing.pdf" target="_blank">Read the paper</a>
+            <h2>Spacecraft Structural Compliance Analysis for Ariane VI - Analysis and Testing (Team work)</h2>
+            <p> The following work was developed as part of the ”Analysis and Testing of Space Structures”
+ course aiming to perform a complete structural analysis of a Spacecraft so as to check its
+ compliance with the Launch Vehicle Ariane VI’s launch requirements. Hence, using tools
+ such Finite Element Models of the Launch Vehicle and the Spacecraft, Matlab codes and
+ Excel spreadsheets, the project contains all required analysis to be performed throughout
+ the design process and theoretical verification of a satellite’s structures.</p>
+  <br><strong>My role:</strong>
+          <br><a href="Projects/HIDB_Team_Analysis_Testing.pdf" target="_blank">Read the paper_AT</a>
         </section>
         <section class="project">
             <h2>Plasma Flow Analysis in Magneto-Plasma Dynamic Thrusters - Aerothermodynamics</h2>
-            <p>Developed a 1D mathematical model for plasma flow in self-field Magneto-Plasma Dynamic Thrusters by coupling Navier–Stokes and Maxwell’s equations.</p>
-            <a href="Projects/Torre_Project_Aerothermodynamics.pdf" target="_blank">Read the paper</a>
+            <p> The paper describes one-dimensional (1D) flow mathematical model to
+ study the physics of fully ionized plasma flow through Magneto Plasma Dynamic
+ Thruster (MPDT). The developed model consists of a set of differential equations
+ obtained by coupling the Navier–Stokes equations with Maxwell’s equations.These
+ simulations have been carried out for a special case of geometries called Tikhonov
+ f
+ itted geometries for alleviating the instability phenomenon commonly known as
+ onset phenomenon in self-field MPDT. All the computations were carried out in
+ Matlab using a higher order integration scheme.</p>
+   <br><strong>My role:</strong>
+          <br><a href="Projects/Torre_Project_Aerothermodynamics.pdf" target="_blank">Read the paper_AT</a>
         </section>
         <section class="project">
             <h2>Bibliographic Research on Space Debris Removal - Operation Research</h2>
-            <p>Investigated optimization strategies for orbital debris removal, focusing on methods like Branch and Bound algorithms and stochastic programming.</p>
-            <a href="Projects/Torre_10645141_OR_Project" target="_blank">Read the paper</a>
+            <p> In recent decades, the proliferation of space assets has amplified the issue of orbital debris,
+ leading to increased risks of collisions among debris and active spacecraft, perpetuating
+ the Kessler Syndrome. This paper reviews optimization strategies for debris removal,
+ emphasizing methods like Branch and Bound algorithms and stochastic programming.
+ These approaches balance computational efficiency with solution optimality, crucial for
+ addressing the complexities of debris removal in densely populated orbital regions. The
+ study compares methodologies across recent literature, highlighting their effectiveness in
+ mitigating debris-related risks and optimizing mission outcomes.</p>
+    <br><strong>My role:</strong>
+          <br><a href="Projects/Torre_10645141_OR_Project" target="_blank">Read the paper_OR</a>
         </section>
     </main>
     <footer>
